feature: products, sse stock product, incomes, registers
