# cmd/api/docs/swagger.json
@@ -1772,6 +1772,27 @@
                 }
             }
         },
+        "/api/v1/notification/alert": {
+            "get": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "description": "Enviar notificaciones",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/event-stream"
+                ],
+                "tags": [
+                    "Notification"
+                ],
+                "summary": "NotificationAlert",
+                "responses": {}
+            }
+        },
         "/api/v1/point_sale/create": {
             "post": {
                 "security": [
@@ -2776,7 +2797,7 @@
                                         "body": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/schemas.ProductResponseDTO"
+                                                "$ref": "#/definitions/schemas.ProductFullResponse"
                                             }
                                         }
                                     }
@@ -5085,13 +5106,21 @@
                     "type": "integer"
                 },
                 "code": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "ABC123"
                 },
                 "description": {
                     "type": "string"
                 },
+                "min_amount": {
+                    "type": "number"
+                },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Producto1"
+                },
+                "notifier": {
+                    "type": "boolean"
                 },
                 "price": {
                     "type": "number"
@@ -5113,8 +5142,14 @@
                 "id": {
                     "type": "integer"
                 },
+                "min_amount": {
+                    "type": "number"
+                },
                 "name": {
                     "type": "string"
+                },
+                "notifier": {
+                    "type": "boolean"
                 },
                 "price": {
                     "type": "number"
@@ -5145,8 +5180,14 @@
                 "id": {
                     "type": "integer"
                 },
+                "min_amount": {
+                    "type": "number"
+                },
                 "name": {
                     "type": "string"
+                },
+                "notifier": {
+                    "type": "boolean"
                 },
                 "price": {
                     "type": "number"
@@ -5168,8 +5209,14 @@
                 "id": {
                     "type": "integer"
                 },
+                "min_amount": {
+                    "type": "number"
+                },
                 "name": {
                     "type": "string"
+                },
+                "notifier": {
+                    "type": "boolean"
                 },
                 "price": {
                     "type": "number"
@@ -5218,8 +5265,14 @@
                 "id": {
                     "type": "integer"
                 },
+                "min_amount": {
+                    "type": "number"
+                },
                 "name": {
                     "type": "string"
+                },
+                "notifier": {
+                    "type": "boolean"
                 },
                 "price": {
                     "type": "number"
@@ -5427,6 +5480,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "is_active": {
+                    "type": "boolean"
+                },
                 "is_admin": {
                     "type": "boolean"
                 },
@@ -5464,6 +5520,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
                 },
                 "is_admin": {
                     "type": "boolean"
